#678 Now, the tooltip for Ranked Variants is fixed, so when the user scrolls down, the tooltip will remain visible.

--- a/assets/css/sass/_tooltip.sass
+++ b/assets/css/sass/_tooltip.sass
@@ -33,6 +33,9 @@
       display: inline-block
       float: left
 
+#matrix-tooltip
+  position: fixed
+
 .tooltip-title
   font-size: 12px
   word-break: break-word
