--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -2660,6 +2660,9 @@ inputinput:-moz-placeholder {
   display: inline-block;
   float: left; }
 
+#matrix-tooltip {
+  position: fixed; }
+
 .tooltip-title {
   font-size: 12px;
   word-break: break-word; }
